Closing resources properly
Using try-close-resources to reduce some Eclipse and Findbugs warnings